--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,13 @@ repositories{
     maven{
         url "https://jitpack.io"
     }
+    jcenter()
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.google.zxing:core:3.2.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.jjoe64:graphview:4.0.1'
