--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ repositories{
 
     }
     jcenter()
+    mavenCentral()
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -35,4 +36,5 @@ dependencies {
     compile 'com.jjoe64:graphview:4.0.1'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
 }
